🏗️ Update layout structure

--- a/content/journal.njk
+++ b/content/journal.njk
@@ -1,7 +1,7 @@
 ---
-layout: layouts/home.njk
+layout: page.njk
 eleventyNavigation:
-  key: Archive
+  key: blog
   order: 2
 ---
 <h1>Journal posts</h1>
