🐛 Make posts work

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -1,6 +1,5 @@
----
-layout: layouts/base.njk
----
+{% extends "page.njk" %}
+
 {# Only include the syntax highlighter CSS on blog posts #}
 <h1>{{ title }}</h1>
 
