--- a/content/journal.njk
+++ b/content/journal.njk
@@ -1,10 +1,7 @@
 ---
-layout: page.njk
 eleventyNavigation:
   key: blog
   order: 2
 ---
-<h1>Journal posts</h1>
-
+{% extends "postslist.njk" %}
 {% set postslist = collections.posts %}
-{% include "postslist.njk" %}
