--- a/public/css/index.css
+++ b/public/css/index.css
@@ -128,31 +128,31 @@ ul.inline, ol.inline {
   list-style-type: none;
   row-gap: 10px;
   column-gap: 15px;
-  padding: 0;
+  padding-left: 0;
   margin: 0;
 }
 
 .pb-1 {
-  padding-bottom: 1rem;
+  padding-bottom: 1rem!important;
 }
 
 .pt-1 {
-  padding-top: 1rem;
+  padding-top: 1rem!important;
 }
 .py-1 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 1rem!important;
+  padding-bottom: 1rem!important;
 }
 .pb-2 {
-  padding-bottom: 2rem;
+  padding-bottom: 2rem!important;
 }
 
 .pt-2 {
-  padding-top: 2rem;
+  padding-top: 2rem!important;
 }
 .py-2 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 2rem!important;
+  padding-bottom: 2rem!important;
 }
 
 .sronly {
