--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -1,25 +1,40 @@
-{% extends "page.njk" %}
+{% extends "core/base.njk" %}
 
-{# Only include the syntax highlighter CSS on blog posts #}
-<h1>{{ title }}</h1>
+{% from "_includes/_components/components.njk" import callout, header %}
 
-<ul class="post-metadata">
-	<li><time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time></li>
-	{%- for tag in tags | filterTagList %}
-	{%- set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
-	<li><a href="{{ tagUrl }}" class="post-tag">{{ tag }}</a>{%- if not loop.last %}, {% endif %}</li>
-	{%- endfor %}
-</ul>
 
-{{ content | safe }}
+{%- block main -%}
+<div class="container center py-2">
+    <main class="main">
 
-{%- if collections.posts %}
-{%- set previousPost = collections.posts | getPreviousCollectionItem %}
-{%- set nextPost = collections.posts | getNextCollectionItem %}
-{%- if nextPost or previousPost %}
-<ul class="links-nextprev">
-	{%- if previousPost %}<li>Previous: <a href="{{ previousPost.url }}">{{ previousPost.data.title }}</a></li>{% endif %}
-	{%- if nextPost %}<li>Next: <a href="{{ nextPost.url }}">{{ nextPost.data.title }}</a></li>{% endif %}
-</ul>
-{%- endif %}
-{%- endif %}
+		<article>
+		{{ header(
+			title = title,
+			description = description
+		) }}
+		<ul class="post-metadata">
+			<li><time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time></li>
+			{%- for tag in tags | filterTagList %}
+			{%- set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
+			<li><a href="{{ tagUrl }}" class="post-tag">{{ tag }}</a>{%- if not loop.last %}, {% endif %}</li>
+			{%- endfor %}
+		</ul>
+		{{ content | safe }}
+		
+		</article>
+
+		{%- if collections.posts %}
+		{%- set previousPost = collections.posts | getPreviousCollectionItem %}
+		{%- set nextPost = collections.posts | getNextCollectionItem %}
+		{%- if nextPost or previousPost %}
+		<ul class="links-nextprev">
+			{%- if previousPost %}<li>Previous: <a href="{{ previousPost.url }}">{{ previousPost.data.title }}</a></li>{% endif %}
+			{%- if nextPost %}<li>Next: <a href="{{ nextPost.url }}">{{ nextPost.data.title }}</a></li>{% endif %}
+		</ul>
+		{%- endif %}
+		{%- endif %}
+    </main>
+</div>
+{%- endblock -%}
+
+
