🎨 Update macro imports

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -1,5 +1,7 @@
 {% extends "core/base.njk" %}
 
+{% import "_includes/_components/components.njk" as macro with context %}
+
 {%- block main -%}
 <div class="container center py-2">
     <main class="main">
