--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -1,14 +1,39 @@
 {% extends "core/base.njk" %}
 
-{% from "_includes/_components/components.njk" import callout, header %}
-
+{% import "_includes/_components/components.njk" as macro with context %}
 
 {%- block main -%}
+
+{%- css %}
+	.links-nextprev {
+		padding-top: 2rem;
+		margin-top: 2rem;
+		border-top: 1px solid var(--callout);
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	}
+	.links-prev,
+	.links-next {
+		display:flex;
+		flex-direction: column;
+		text-align: center;
+	}
+	.links-prev::before,
+	.links-next::before {
+		content: '➪';
+		font-size: 4rem;
+	}
+	.links-prev::before {
+		transform: rotate(180deg);	
+		display: inline-block;
+	}
+{% endcss %}
+
 <div class="container center py-2">
     <main class="main">
 
 		<article>
-		{{ header(
+		{{ macro.header(
 			title = title,
 			description = description
 		) }}
@@ -27,14 +52,15 @@
 		{%- set previousPost = collections.posts | getPreviousCollectionItem %}
 		{%- set nextPost = collections.posts | getNextCollectionItem %}
 		{%- if nextPost or previousPost %}
-		<ul class="links-nextprev">
-			{%- if previousPost %}<li>Previous: <a href="{{ previousPost.url }}">{{ previousPost.data.title }}</a></li>{% endif %}
-			{%- if nextPost %}<li>Next: <a href="{{ nextPost.url }}">{{ nextPost.data.title }}</a></li>{% endif %}
-		</ul>
+		<nav aria-label="Post">
+			<ul class="links-nextprev unstyled">
+				{%- if previousPost %}<li class="links-prev">
+				<span class="sronly">Previous:</span> <a href="{{ previousPost.url }}">{{ previousPost.data.title }}</a></li>{% else %}<li></li>{% endif %}
+				{%- if nextPost %}<li class="links-next"><span class="sronly">Next:</span> <a href="{{ nextPost.url }}">{{ nextPost.data.title }}</a></li>{% else %}<li></li>{% endif %}
+			</ul>
+		</nav>
 		{%- endif %}
 		{%- endif %}
     </main>
 </div>
 {%- endblock -%}
-
-
