--- a/public/css/index.css
+++ b/public/css/index.css
@@ -132,6 +132,11 @@ ul.inline, ol.inline {
   margin: 0;
 }
 
+ul.unstyled, ol.unstyled {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 .pb-1 {
   padding-bottom: 1rem!important;
 }
