✨ Add eleventy navigation

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -3,7 +3,7 @@
 {% import "_includes/_components/components.njk" as macro with context %}
 
 {%- block main -%}
-<div class="container center py-2">
+<div class="container center">
     <main class="main">
     {%- block content -%}
         {{ content | safe }}
