--- a/_includes/core/base.njk
+++ b/_includes/core/base.njk
@@ -1,6 +1,8 @@
 {% include "_includes/core/_template-start.njk" %}
 
 <body>
+    {% include "_includes/core/_nav.njk" %}
+
     {%- block main -%}
         {{- content -}}
     {%- endblock -%}
