--- a/_includes/core/_head.njk
+++ b/_includes/core/_head.njk
@@ -21,4 +21,8 @@
     <style>
         {% getBundle "css" %}
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
+
 </head>
