🎨 Update journal to blog

--- a/content/blog.njk
+++ b/content/blog.njk
@@ -1,6 +1,8 @@
 ---
+title: Blog
+emoji: ' <span class="emoji" role="img" aria-label="Pencil and paper">📝</span>'
 eleventyNavigation:
-  key: blog
+  key: Blog
   order: 2
 ---
 {% extends "postslist.njk" %}
