--- a/content/index.njk
+++ b/content/index.njk
@@ -3,7 +3,7 @@ eleventyNavigation:
   key: Home
   order: 1
 numberOfLatestPostsToShow: 3
-title: frills' internet garden
+title: Frills's internet garden
 rp: You stumble upon a hidden garden, hardly anyone has been here before. Moss has grown over the edges of the path you stand on and weeds are peeking up through the cracks. The sun is warm on your face though, so you decide to stay a while and take a look around.
 ---
 {% extends 'page.njk'%}
