--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -29,38 +29,38 @@
 	}
 {% endcss %}
 
-<div class="container center">
-    <main class="main">
-
-		<article>
-		{{ macro.header(
-			title = title,
-			description = description
-		) }}
-		<ul class="post-metadata">
-			<li><time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time></li>
+<article class="article">
+	{{ macro.header(
+		title = title,
+		description = description
+	) }}
+	<ul class="post-metadata unstyled">
+		<li>Written on <time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time></li>
+		{% if tags %}
+		<li>Tags:
 			{%- for tag in tags | filterTagList %}
 			{%- set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
-			<li><a href="{{ tagUrl }}" class="post-tag">{{ tag }}</a>{%- if not loop.last %}, {% endif %}</li>
+			{# <a href="{{ tagUrl }}" class="post-tag">{{ tag }}</a>{%- if not loop.last %}, {% endif %} #}
+			<span class="post-tag">{{ tag }}</span>{%- if not loop.last %}, {% endif %}
 			{%- endfor %}
-		</ul>
-		{{ content | safe }}
-		
-		</article>
+		</li>
+		{% endif %}
+	</ul>
+	{{ content | safe }}
+	
+</article>
 
-		{%- if collections.posts %}
-		{%- set previousPost = collections.posts | getPreviousCollectionItem %}
-		{%- set nextPost = collections.posts | getNextCollectionItem %}
-		{%- if nextPost or previousPost %}
-		<nav aria-label="Post">
-			<ul class="links-nextprev unstyled">
-				{%- if previousPost %}<li class="links-prev">
-				<span class="sronly">Previous:</span> <a href="{{ previousPost.url }}">{{ previousPost.data.title }}</a></li>{% else %}<li></li>{% endif %}
-				{%- if nextPost %}<li class="links-next"><span class="sronly">Next:</span> <a href="{{ nextPost.url }}">{{ nextPost.data.title }}</a></li>{% else %}<li></li>{% endif %}
-			</ul>
-		</nav>
-		{%- endif %}
-		{%- endif %}
-    </main>
-</div>
+{%- if collections.posts %}
+{%- set previousPost = collections.posts | getPreviousCollectionItem %}
+{%- set nextPost = collections.posts | getNextCollectionItem %}
+{%- if nextPost or previousPost %}
+<nav aria-label="Post">
+	<ul class="links-nextprev unstyled">
+		{%- if previousPost %}<li class="links-prev">
+		<span class="sronly">Previous:</span> <a href="{{ previousPost.url }}">{{ previousPost.data.title }}</a></li>{% else %}<li></li>{% endif %}
+		{%- if nextPost %}<li class="links-next"><span class="sronly">Next:</span> <a href="{{ nextPost.url }}">{{ nextPost.data.title }}</a></li>{% else %}<li></li>{% endif %}
+	</ul>
+</nav>
+{%- endif %}
+{%- endif %}
 {%- endblock -%}
