--- a/content/tags.njk
+++ b/content/tags.njk
@@ -1,4 +1,4 @@
----
+{# ---
 pagination:
   data: collections
   size: 1
@@ -19,4 +19,4 @@ permalink: /tags/{{ tag | slugify }}/
 {% set postslist = collections[ tag ] %}
 {% include "postslist.njk" %}
 
-<p>See <a href="/tags/">all tags</a>.</p>
+<p>See <a href="/tags/">all tags</a>.</p> #}
