--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -2,18 +2,18 @@
 
 {%- block main -%}
 
+{% import "_includes/_components/components.njk" as macro with context %}
+
 {%- css %}.postlist { counter-reset: start-from {{ (postslistCounter or postslist.length) + 1 }} }{% endcss %}
 
-<div class="container center">
-    <main class="main">
-		<ol reversed class="postlist">
-		{% for post in postslist | reverse %}
-			<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
-				<a href="{{ post.url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
-				<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("LLLL yyyy") }}</time>
-			</li>
-		{% endfor %}
-		</ol>
-    </main>
-</div>
+	{{ macro.header(title + emoji) }}
+
+	<ol reversed class="unstyled">
+	{% for post in postslist | reverse %}
+		<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
+			<a href="{{ post.url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title | safe }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
+			<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">Posted {{ post.date | readableDate("d LLL yyyy") }}</time>
+		</li>
+	{% endfor %}
+	</ol>
 {%- endblock -%}
