--- a/_includes/core/_head.njk
+++ b/_includes/core/_head.njk
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title or metadata.title }}</title>
+    <title>{{ title | safe or metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
 
     {#- Atom and JSON feeds included by default #}
