--- a/content/index.njk
+++ b/content/index.njk
@@ -10,7 +10,7 @@ rp: You stumble upon a hidden garden, hardly anyone has been here before. Moss h
 
 {%- block content -%}
 <section>
-	{{ macro.header(title + ' <span class="emoji" role="img" aria-label="Seedling">🌱</span>', rp, "homepage" ) }}
+	{{ macro.header(title + ' <span class="emoji" role="img" aria-label="Seedling">🌱</span>', rp ) }}
 
 	<ul class="inline pb-1">
 		<li><span class="emoji" role="img" aria-label="Sun sign">🌞</span> gemini <span role="img" class="emoji" aria-label="Moon sign">🌛</span> scorpio</li>
