--- a/_includes/core/_footer.njk
+++ b/_includes/core/_footer.njk
@@ -1,5 +1,14 @@
-<footer class="footer">
+<footer class="footer pt-1">
     <div class="webring--nullring">
         <script src="https://nuthead.neocities.org/ring/ring.js"></script>
+    </div>
+    <div class="webring--retronaut">
+        <a href='https://webring.dinhe.net/prev/https://fri11s.neocities.org/'>
+            <span class="sronly">Previous site </span> <
+        </a>
+        <a href="https://webring.dinhe.net/" target="_blank">retronaut</a>
+        <a href='https://webring.dinhe.net/next/https://fri11s.neocities.org/'>
+            <span class="sronly">Next site </span>>
+        </a>
     </div>
 </footer>
