--- a/_includes/core/base.njk
+++ b/_includes/core/base.njk
@@ -14,6 +14,7 @@
 
     {%- block js -%}
     {%- endblock -%}
+    <script>alert('deployed')</script>
 </body>
 
 {% include "_includes/core/_template-end.njk" %}
