--- a/_includes/core/_head.njk
+++ b/_includes/core/_head.njk
@@ -4,25 +4,26 @@
     <title>{{ title | safe or metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
 
-    {#- Atom and JSON feeds included by default #}
-    <link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
-    <link rel="alternate" href="/feed/feed.json" type="application/json" title="{{ metadata.title }}">
-
-    {#-
-		CSS bundles are provided via the `eleventy-plugin-bundle` plugin:
-		1. You can add to them using `{% css %}`
-		2. You can get from them using `{% getBundle "css" %}` or `{% getBundleFileUrl "css" %}`
-		3. You can do the same for JS: {% js %}{% endjs %} and <script>{% getBundle "js" %}</script>
-		4. Learn more: https://github.com/11ty/eleventy-plugin-bundle
-		#}
-
-    {%- css %}{% include "public/css/index.css" %}{% endcss %}
-
-    <style>
-        {% getBundle "css" %}
-    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
+
+
+    {# <link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
+    <link rel="alternate" href="/feed/feed.json" type="application/json" title="{{ metadata.title }}"> #}
+
+    {#- CSS bundles via `eleventy-plugin-bundle` https://github.com/11ty/eleventy-plugin-bundle #}
+    {%- css "preload" %}{% include "public/css/variables.css" %}{% endcss %}
+    {%- css "preload" %}{% include "public/css/preload.css" %}{% endcss %}
+    {%- css "defer" %}{% include "public/css/main.css" %}{% endcss %}
+
+    <style>
+        {% getBundle "css", "preload" %}
+    </style>
+
+    <link rel="stylesheet" href="{% getBundleFileUrl "css", "defer" %}">
+    {# <noscript>
+      <link rel="stylesheet" href="{% getBundleFileUrl "css", "noscript" %}">
+    </noscript> #}
 
 </head>
