✨ Add hotline webring

--- a/_includes/core/_footer.njk
+++ b/_includes/core/_footer.njk
@@ -11,4 +11,13 @@
             <span class="sronly">Next site </span>>
         </a>
     </div>
+    <div class="webring--hotline">
+        <a href='https://hotlinewebring.club/fri11s/next'>
+            <span class="sronly">Previous site </span> <
+        </a>
+        <a href="https://hotlinewebring.club/" target="_blank">hotline</a>
+        <a href='https://hotlinewebring.club/fri11s/previous'>
+            <span class="sronly">Next site </span>>
+        </a>
+    </div>
 </footer>
