--- a/content/index.njk
+++ b/content/index.njk
@@ -36,7 +36,7 @@ rp: You stumble upon a hidden garden, hardly anyone has been here before. Moss h
 		<span><span id="lfmTime">right now</span></span>
 		',
 		body = '
-		<span id="lfmSong" class="lowercase">No recently played song :(</span>
+		<span id="lfmSong">No recently played song :(</span>
 		'
 	)}}
 
