--- a/content/index.njk
+++ b/content/index.njk
@@ -23,7 +23,7 @@ rp: You stumble upon a hidden garden, hardly anyone has been here before. Moss h
 		element = 'article',
 		body = '
 		<div id="statuscafe">
-			<div id="statuscafe-username"><a href="https://status.cafe/users/fri11s" target="_blank">fri11s</a> 🌻</div>
+			<div id="statuscafe-username"><a href="https://status.cafe/users/fri11s" target="_blank">Last status</a> 🌻</div>
 			<div id="statuscafe-content">No recent update :(</div>
 		</div>
 	') }}
