--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,6 +100,32 @@ ol.unstyled {
   padding-bottom: 2rem !important;
 }
 
+.mb-1 {
+  margin-bottom: 1rem !important;
+}
+
+.mt-1 {
+  margin-top: 1rem !important;
+}
+
+.my-1 {
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
+}
+
+.mb-2 {
+  margin-bottom: 2rem !important;
+}
+
+.mt-2 {
+  margin-top: 2rem !important;
+}
+
+.my-2 {
+  margin-top: 2rem !important;
+  margin-bottom: 2rem !important;
+}
+
 .sronly {
   display: inline-block;
   width: 0;
