📃 Add about WIP

--- a/content/about.njk
+++ b/content/about.njk
@@ -1,15 +1,12 @@
 ---
-eleventyNavigation:
-  {# key: About #}
-  {# order: 4 #}
 title: About the Webmaster
-rp: There is a rustling noise from behind a bush and you go to investigate. Amidst the leaves, a pair of mischievous brown eyes meet yours. Slowly, a woman emerges from the undergrowth, adorned with tangled brown and blonde hair and grubby gardening attire. You get a waft of earth and soap as she extends her hand in greeting.
+description: There is a rustling noise from behind a bush and you go to investigate. Amidst the leaves, a pair of mischievous brown eyes meet yours. Slowly, a woman emerges from the undergrowth, adorned with tangled brown and blonde hair and grubby gardening attire. You get a waft of earth and soap as she extends her hand in greeting.
 ---
 {% extends 'page.njk'%}
 
 {%- block content -%}
 <section>
-	{{ macro.header(title + ' <span class="emoji" role="img" aria-label="Seedling">🌷</span>', rp ) }}
+	{{ macro.header(title + ' <span class="emoji" role="img" aria-label="Seedling">🌷</span>' ) }}
 
 	
 
