🎨  Update webring styles

--- a/_includes/core/_footer.njk
+++ b/_includes/core/_footer.njk
@@ -1,24 +1,16 @@
 <footer class="footer pt-1">
     <div class="webring--retronaut">
-        <a href="https://webring.dinhe.net/prev/https://fri11s.neocities.org/" class="webring__prev">
-            <span class="sronly">Previous site </span>
-            < </a> <a href="https://webring.dinhe.net/" target="_blank">retronaut
-        </a>
-        <a href="https://webring.dinhe.net/next/https://fri11s.neocities.org/" class="webring__next">
-            <span class="sronly">Next site </span>>
-        </a>
+        <a href="https://webring.dinhe.net/prev/https://fri11s.neocities.org/" class="webring__prev">Previous site</a>
+        <a href="https://webring.dinhe.net/" target="_blank">retronaut</a>
+        <a href="https://webring.dinhe.net/next/https://fri11s.neocities.org/" class="webring__next">Next site</a>
     </div>
     <div class="webring--hotline">
-        <a href="https://hotlinewebring.club/fri11s/next" class="webring__prev">
-            <span class="sronly">Previous site </span>
-            < </a> <a href="https://hotlinewebring.club/" target="_blank">hotline
-        </a>
-        <a href="https://hotlinewebring.club/fri11s/previous" class="webring__next">
-            <span class="sronly">Next site </span>>
-        </a>
+        <a href="https://hotlinewebring.club/fri11s/next" class="webring__prev">Previous site</a>
+        <a href="https://hotlinewebring.club/" target="_blank">hotline</a>
+        <a href="https://hotlinewebring.club/fri11s/previous" class="webring__next">Next site</a>
     </div>
     <div class="webring--neossg">
-        <div id='neossg'>
+        <div id="neossg">
             <script type="text/javascript" src="https://neossg.neocities.org/onionring-variables.js"></script>
             <script type="text/javascript" src="https://neossg.neocities.org/onionring-widget.js"></script>
         </div>
