--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,10 +16,10 @@
   font-family: 'Cherry Bomb One', sans-serif;
   font-size: 3rem;
   font-display: fallback;
+  font-weight: 400;
 }
 
 .main {
-  flex: 2;
   border: 1px solid var(--border);
   background-color: var(--bg);
   padding: 1rem 1.5rem;
@@ -30,7 +30,7 @@
   text-align: left;
   display: flex;
   justify-content: flex-start;
-  gap: 50px;
+  gap: 15px;
 }
 
 .callout {
@@ -148,9 +148,45 @@ ol.unstyled {
   font-style: italic;
 }
 
+.flip-y {
+  transform: scaleX(-1);
+}
+.d-ib {
+  display: inline-block;
+}
+
+.webring__prev,
+.webring__next,
+.webring-prev,
+.webring-next {
+  font-size: 0!important;
+  width: 30px;
+  display: inline-block;
+  text-align: center;
+}
+
+.webring__prev::before,
+.webring__next::before,
+.webring-prev a::before,
+.webring-next a::before {
+    content: '➪';
+    font-size: 1rem;
+    display: inline-block;
+}
+
+.webring__prev::before,
+.webring-prev a::before {
+    transform: scaleX(-1);
+    display: inline-block;
+}
+
 /* Third Party */
 
 #statuscafe #statuscafe-username a {
   font-weight: bold;
   text-decoration: none;
+}
+
+#neossg table {
+  border-collapse: collapse;
 }
