📃 Update About page with TODO

--- a/content/about.njk
+++ b/content/about.njk
@@ -25,16 +25,16 @@ eleventyNavigation:
 
 	<h2>Some places on the internet that I go</h2>
 	<ul>
-		<li><span class="emoji" role="img" aria-label="Bird">🐦</span> <a href="https://twitter.com/fri11s">@fri11s@twitter.com</a></li>
-		<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> <a href="https://cutie.city/@frills">@frills@cutie.city</a> (Mastodon)</li>
-		<li><span class="emoji" role="img" aria-label="Cat">😺</span> <a href="https://neocities.org/site/fri11s">@fri11s@neocities.com</a></li>
+		<li><span class="emoji" role="img" aria-label="Bird">🐦</span> Twitter: <a href="https://twitter.com/fri11s">@fri11s@twitter.com</a></li>
+		<li><span class="emoji" role="img" aria-label="Cat">😺</span> Neocities profile: <a href="https://neocities.org/site/fri11s">@fri11s@neocities.com</a></li>
+		<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> Fediverse: <a href="https://cutie.city/@frills">@frills@cutie.city</a> (Mastodon)</li>
 	</ul>
 
 
 </section>
 
+{# TODO: make this accessible
 <section>
-	{# TODO: make this accessible #}
 	<h2>My Character Sheet</h2>
 	<p>Sorry this is not accessible yet.<br> Too long didn't read: I'm a neutral good, Human Druid (Paladin and Sorcerer multi-class).</p>
 	<h3>Alignment:</h3>
@@ -79,7 +79,18 @@ eleventyNavigation:
 	Sorcerer -- XXXXXXXXXXXXXXXX (16)<br>
 	Warlock --- XXXXXXXX (8)<br>
 	Wizard ---- XXXXXXXXXXXXXX (14)</p>
+</section> #}
+
+<section>
+	<h2>To do on this website</h2>
+	<ol>
+		<li>Credits page</li>
+		<li>Ethos page</li>
+		<li>88x31 button wall (how does this interact with Ethos?)</li>
+		<li>Site map (that I nuked because I thought it was killing the pipeline)</li>
+	</ol>
 </section>
+
 {%- endblock -%}
 
 {%- block js -%}
